--- a/index.html
+++ b/index.html
@@ -10,17 +10,13 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" 
       crossorigin="anonymous"
       />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,11 +26,86 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <!-- create a notification of item stored -->
+    <div class="py-3" id="saved" style="text-align: center; display: none; color: darkred" >✅ Saved to Local Storage!</div>
+    <div class="container-fluid">
       <!-- Timeblocks go here -->
+
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text" style="width: 90px;" value="9 AM">9 AM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">10 AM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">11 AM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">12 AM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">1 PM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">2 PM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">3 PM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">4 PM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">5 PM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">6 PM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">7 PM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">8 PM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">9 PM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>
+        <div class="input-group my-1" style="height: 90px">
+            <span class="input-group-text eventHour" style="width: 90px;">10 PM</span>
+            <input class="form-control event" type="text">
+            <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
+        </div>      
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" /> -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
