--- a/index.html
+++ b/index.html
@@ -32,72 +32,72 @@
       <!-- Timeblocks go here -->
 
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text" style="width: 90px;" value="9 AM">9 AM</span>
+            <span id="9" class="input-group-text eventHour" style="width: 90px;">1</span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">10 AM</span>
+            <span id="10" class="input-group-text eventHour" style="width: 90px;" id="2">2</span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">11 AM</span>
+            <span id="11" class="input-group-text eventHour" style="width: 90px;">3</span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">12 AM</span>
+            <span id="12" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">1 PM</span>
+            <span id="13" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">2 PM</span>
+            <span id="14" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">3 PM</span>
+            <span id="15" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">4 PM</span>
+            <span id="16" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">5 PM</span>
+            <span id="17" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">6 PM</span>
+            <span id="18" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">7 PM</span>
+            <span id="19" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">8 PM</span>
+            <span id="20" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">9 PM</span>
+            <span id="21" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span class="input-group-text eventHour" style="width: 90px;">10 PM</span>
+            <span id="22" class="input-group-text eventHour" style="width: 90px;"></span>
             <input class="form-control event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>      
