--- a/index.html
+++ b/index.html
@@ -32,79 +32,79 @@
       <!-- Timeblocks go here -->
 
         <div class="input-group my-1" style="height: 90px">
-            <span id="9" class="input-group-text eventHour" style="width: 90px;">1</span>
-            <input class="form-control event" type="text">
+            <span id="9" class="input-group-text eventHour" style="width: 90px;"></span>
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span id="10" class="input-group-text eventHour" style="width: 90px;" id="2">2</span>
-            <input class="form-control event" type="text">
+            <span id="10" class="input-group-text eventHour" style="width: 90px;" id="2"></span>
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
-            <span id="11" class="input-group-text eventHour" style="width: 90px;">3</span>
-            <input class="form-control event" type="text">
+            <span id="11" class="input-group-text eventHour" style="width: 90px;"></span>
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="12" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="13" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="14" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="15" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="16" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="17" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="18" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="19" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="20" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="21" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>
         <div class="input-group my-1" style="height: 90px">
             <span id="22" class="input-group-text eventHour" style="width: 90px;"></span>
-            <input class="form-control event" type="text">
+            <input class="form-control" name="event" type="text">
             <button type="button" class="btn btn-primary" style="height: 90px; width: 90px;"><i class="fa-solid fa-floppy-disk fa-lg" style="color: #ffffff;"></i></button>
         </div>      
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" /> -->
+
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script src="script.js"></script>
   </body>
